Bug 54506 - If account that was set to auto-login is deleted, GNOME will not start on the next reboot
Summary: If account that was set to auto-login is deleted, GNOME will not start on the...
Status: RESOLVED FIXED
Alias: None
Product: accountsservice
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Matthias Clasen
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-09-04 18:51 UTC by Ray Strode [halfline]
Modified: 2013-06-11 16:39 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
daemon: turn off autologin for deleted users (4.94 KB, patch)
2013-06-04 15:24 UTC, Ray Strode [halfline]
Details | Splinter Review

Description Ray Strode [halfline] 2012-09-04 18:51:43 UTC
(from https://bugzilla.gnome.org/show_bug.cgi?id=683337 )
I don't know if this is the right component to file this issue under, so please
feel free to move as appropriate.

I had two accounts on my system. One is 'duffy' which is my user and has full
privileges. The other was 'foobar', which was for testing purposes and was set
to auto login.

I had a lot of trouble deleting user 'foobar.' I would try to delete it from
the 'user accounts' panel in the control center, but the control center would
tell me that 'foobar' was still logged in - even though it wasn't. Ray helped
me delete the account off of my system, but I don't know what he did to make it
happen.

That was Friday. I got into work this morning after a 3 day weekend and booted
my machine - except it would not boot. It was stuck on a black screen with a
spinner and would never get to GDM even after 15 minutes.

It turns out that even though the 'foobar' user was deleted off of the system,
it was still set to auto-login, so the system was stuck trying to auto-login an
account that does not exist. We discovered this by looking in
/etc/gdm/custom.conf where it said the following even though foobar doesn't
exist:

[daemon]

AutomaticLoginEnable=True
AutomaticLogin=foobar

Commenting out those lines allowed me to get to GDM and access a working
desktop again.

Maybe the trouble I had deleting 'foobar' was related to the autologin setting
as well?
Comment 1 Ray Strode [halfline] 2013-06-04 15:24:09 UTC
Created attachment 80294 [details] [review]
daemon: turn off autologin for deleted users

Right now it's possible to delete a user who is configured to
automatically log in.

Doing so causes the system not to boot.

This commit turns off autologin before deleting the user.

https://bugs.freedesktop.org/show_bug.cgi?id=54506
Comment 2 Ray Strode [halfline] 2013-06-04 15:24:57 UTC
attachment 80294 [details] [review] will probably work, but i haven't tested it yet.
Comment 3 Ray Strode [halfline] 2013-06-11 14:57:04 UTC
we should modify this patch to handle disabled users as well, not just deleted users.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.