daemon: turn off autologin for deleted users

Right now it's possible to delete a user who is configured to
automatically log in.

Doing so causes the system not to boot.

This commit turns off autologin before deleting the user.

https://bugs.freedesktop.org/show_bug.cgi?id=54506